[gd_scene load_steps=10 format=2]

[ext_resource path="res://font/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/variations/0/Timer_body.gd" type="Script" id=2]
[ext_resource path="res://scenes/variations/0/Body.gd" type="Script" id=3]




[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 325.0
margin_top = 446.338
margin_right = 674.0
margin_bottom = 496.338
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Dispositivos de adquisici√≥n de entrada"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 325.0
margin_top = 200.972
margin_right = 608.0
margin_bottom = 243.971
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Memoria de datos y programas"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 325.0
margin_top = 78.3
margin_right = 463.0
margin_bottom = 125.3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "CPU"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 325.0
margin_top = 321.0
margin_right = 521.0
margin_bottom = 378.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Dispositivos de Salida"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 762.0
margin_top = 22.8413
margin_right = 820.0
margin_bottom = 125.841
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "10
"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Label5"]
wait_time = 10.9
autostart = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 105.0
margin_top = 102.0
margin_right = 163.0
margin_bottom = 126.0
align = 1
max_length = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
anchor_left = 2.0
anchor_right = 2.0
margin_left = 105.0
margin_top = 214.0
margin_right = 163.0
margin_bottom = 238.0
align = 1
max_length = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 105.0
margin_top = 338.639
margin_right = 163.0
margin_bottom = 362.639
align = 1
max_length = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 105.0
margin_top = 454.374
margin_right = 163.0
margin_bottom = 478.374
align = 1
max_length = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 738.558
margin_top = 509.159
margin_right = 863.558
margin_bottom = 571.159
custom_fonts/font = SubResource( 6 )
text = "Finalizar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Label5/Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="text_changed" from="LineEdit3" to="." method="_on_LineEdit3_text_changed"]
[connection signal="text_changed" from="LineEdit4" to="." method="_on_LineEdit4_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
